# ShadowDag

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  OPS_RUNBOOK.md  README.md  TESTNET_GUIDE.md  deploy_testnet.sh  docker-compose.yml  errors.rs  install.sh  lib.rs  tests.rs
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  wallet-release.yml
benches/: core_benchmarks.rs  tps_benchmark.rs
cache/block_cache/: mod.rs
config/: checkpoints.rs
config/consensus/: consensus_params.rs  emission_schedule.rs  mempool_config.rs
config/genesis/: genesis.rs
config/network/: bootstrap_nodes.rs  network_params.rs
config/node/: node_config.rs  node_roles.rs
daemon/: mod.rs
deploy/: install-systemd.sh  sd
deploy/systemd/: miner.env.example  shadowdag-miner.service  shadowdag-node.service  shadowdag.logrotate  wait-for-rpc.sh
domain/address/: address.rs  invisible_wallet.rs  key_derivation.rs  stealth_address.rs
domain/block/: block.rs  block_body.rs  block_builder.rs  block_header.rs  block_rules.rs  merkle_proof.rs  merkle_tree.rs  merkle_verifier.rs
domain/traits/: block_processor.rs  content_hasher.rs  fee_store.rs  mod.rs  peer_info.rs  pow_checker.rs  sync_peers.rs  tx_pool.rs  utxo_backend.rs
domain/transaction/: decoy_transaction.rs  transaction.rs  tx_builder.rs  tx_fee.rs  tx_hash.rs  tx_receipt.rs  tx_validator.rs
domain/types/: amount.rs  difficulty.rs  hash.rs  peer_address.rs  timestamp.rs
domain/utxo/: utxo.rs  utxo_key.rs  utxo_set.rs  utxo_snapshot.rs  utxo_spend.rs  utxo_validator.rs
engine/anti_double_spend/: confirmed_tx_store.rs  mod.rs  zero_conf_guard.rs
engine/consensus/: block_processor.rs  chain_manager.rs  finality.rs
engine/consensus/core/: consensus.rs  consensus_manager.rs  fork_choice.rs
engine/consensus/difficulty/: difficulty.rs  difficulty_adjustment.rs  difficulty_window.rs  retarget.rs
engine/consensus/reorg/: mod.rs
engine/consensus/rewards/: developer_reward.rs  emission.rs  miner_reward.rs  reward.rs
engine/consensus/state/: mod.rs
engine/consensus/validation/: block_context.rs  block_validator.rs  consensus_validator.rs
engine/crypto/: serialization.rs
engine/crypto/hash/: blake3.rs  keccak.rs  muhash.rs  sha3.rs  shadowhash.rs
engine/crypto/keys/: keypair.rs  private_key.rs  public_key.rs
engine/crypto/random/: csprng.rs  entropy.rs
engine/crypto/signatures/: dilithium.rs  ed25519.rs  falcon.rs  schnorr.rs
engine/dag/conflicts/: mod.rs
engine/dag/core/: block_graph.rs  bps_engine.rs  dag.rs  dag_manager.rs  dag_state.rs
engine/dag/ghostdag/: blue_set.rs  ghostdag.rs  ordering.rs  red_set.rs
engine/dag/security/: dag_shield.rs  dos_protection.rs  flood_protection.rs  selfish_mining_guard.rs  spam_filter.rs
engine/dag/simulator/: network_simulator.rs
engine/dag/sync/: block_locator.rs  dag_sync.rs  header_sync.rs
engine/dag/tips/: tip_manager.rs
engine/dag/traversal/: mod.rs
engine/dag/validation/: conflict_detector.rs  dag_validator.rs  parent_validator.rs
engine/dex/: order_book.rs
engine/mining/algorithms/: anti_asic.rs  hash_mix.rs  shadowhash.rs
engine/mining/gpu/: cuda_miner.rs  gpu_miner.rs  opencl_miner.rs
engine/mining/miner/: block_template.rs  fair_ordering.rs  miner.rs  miner_controller.rs  miner_stats.rs
engine/mining/pow/: pow_difficulty.rs  pow_engine.rs  pow_validator.rs
engine/mining/stratum/: stratum_server.rs
engine/orphans/: mod.rs
engine/privacy/confidential/: bulletproofs.rs  confidential_tx.rs  pedersen.rs  pedersen_commitment.rs  range_proof.rs
engine/privacy/ringct/: clsag.rs  key_image.rs  ring_builder.rs  ring_signature.rs  ring_validator.rs
engine/privacy/shadow_pool/: mixer.rs  pool_manager.rs  shadow_pool.rs  shadow_transaction.rs
engine/privacy/stealth/: stealth_address.rs  stealth_scanner.rs  view_key.rs
engine/pruning/: mod.rs  pruning_engine.rs
engine/state_snapshot/: mod.rs
engine/swap/: atomic_swap.rs
engine/tx_validation/: mod.rs
examples/: counter.sasm  deploy_token.sasm  escrow.sasm  factory_create2.sasm  logs_filter.sasm  token.sasm  token_wallet.sasm
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_block_deserialize.rs  fuzz_canonical_bytes.rs  fuzz_transaction_deserialize.rs  fuzz_vm_execute.rs
indexes/explorer/: mod.rs
indexes/receipt_index/: mod.rs
indexes/tx_index/: mod.rs
indexes/utxo_index/: mod.rs
metrics/: mod.rs
runtime/event_bus/: event_bus.rs  event_dispatcher.rs  event_types.rs
runtime/node_runtime/: lifecycle.rs  runtime.rs  runtime_manager.rs
runtime/scheduler/: async_runtime.rs  task_scheduler.rs
runtime/vm/contracts/: build_manifest.rs  contract.rs  contract_abi.rs  contract_deployer.rs  contract_package.rs  contract_storage.rs  contract_verifier.rs  deployment_manifest.rs  token_standard.rs
runtime/vm/core/: assembler.rs  (+16 more)
runtime/wasm/: mod.rs  sdk.rs
sdk/: shadowdag_sdk.rs
service/events/: mod.rs  pubsub.rs
storage/: mod.rs
telemetry/: diagnostics.rs
telemetry/logging/: log_config.rs  logger.rs  structured.rs
telemetry/metrics/: metrics.rs  prometheus.rs  registry.rs
telemetry/tracing/: tracing.rs
tests/suite/: chaos_tests.rs  consensus_tests.rs  contract_e2e_tests.rs  dag_tests.rs  db_tests.rs  determinism_tests.rs  dos_tests.rs  edge_case_tests.rs  genesis_tests.rs  mempool_advanced_tests.rs  mempool_tests.rs  multi_node_tests.rs  p2p_network_tests.rs  performance_tests.rs  pow_genesis_tests.rs  proptest_consensus.rs  proptest_dag.rs  proptest_safety.rs  proptest_security.rs  proptest_transactions.rs  recovery_tests.rs  rpc_tests.rs  security_tests.rs  soak_tests.rs  stress_tests.rs  transaction_tests.rs  tx_layer_tests.rs  tx_validator_tests.rs  utxo_layer_tests.rs  utxo_state_tests.rs  utxo_tests.rs
(+91 files in other folders)
