# TODO [v2.0-architecture]: Split into Cargo workspace for faster compile times:
#   shadowdag-core/     (domain types, traits, errors)
#   shadowdag-engine/   (consensus, mining, privacy, DAG)
#   shadowdag-node/     (networking, RPC, mempool)
#   shadowdag-wallet/   (wallet, key management)
#   shadowdag-vm/       (ShadowVM, contracts, precompiles)

[package]
name = "shadowdag"
version = "1.0.0"
edition = "2021"
description = "ShadowDAG — Hybrid BlockDAG Privacy Coin with BlockDAG + Privacy + GPU Mining"
authors = ["ShadowDAG Team"]
license = "MIT"
repository = "https://github.com/shadowdag/shadowdag"
keywords = ["blockchain", "dag", "privacy", "mining", "cryptocurrency"]
categories = ["cryptography::cryptocurrencies"]

[lib]
name = "shadowdag"
path = "lib.rs"

[[bin]]
name = "shadowdag-node"
path = "bin/node.rs"

[[bin]]
name = "shadowdag-miner"
path = "bin/miner.rs"

[[bin]]
name = "shadowdag-wallet"
path = "bin/wallet.rs"

[[bin]]
name = "mine-genesis"
path = "bin/mine_genesis.rs"

[[bin]]
name = "shadowdag-loadtest"
path = "bin/loadtest.rs"

[dependencies]
# ─── Database ─────────────────────────────────────────────────────────────────
rocksdb            = "0.21"

# ─── Serialization ────────────────────────────────────────────────────────────
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
# TODO [v2.0-migration]: Upgrade to bincode = "2" — API changes from serialize/deserialize to encode/decode.
# 120 usages across 29 files need migration. See: https://docs.rs/bincode/2/bincode/
bincode            = "1"

# ─── Randomness ───────────────────────────────────────────────────────────────
rand               = "0.8"
rand_core          = "0.6"
getrandom          = "0.2"

# ─── Privacy: Bulletproofs & Curve25519 ───────────────────────────────────────
# NOTE: Internal Bulletproof implementation wraps this. Monitor for bulletproofs-plus migration.
bulletproofs       = "4"
curve25519-dalek   = { version = "4", features = ["serde", "rand_core", "digest"] }
merlin             = "3"

# ─── Signatures: Ed25519 ─────────────────────────────────────────────────────
ed25519-dalek      = { version = "2", features = ["rand_core"] }

# ─── Post-Quantum Cryptography ────────────────────────────────────────────────
pqcrypto-falcon    = "0.3"
pqcrypto-dilithium = "0.5"
pqcrypto-traits    = "0.3"

# ─── Hashing ──────────────────────────────────────────────────────────────────
sha2               = "0.10"
sha3               = "0.10"
blake2             = "0.10"
blake2b_simd       = "1"
blake3             = "1"
digest             = "0.10"

# ─── Parallelism ──────────────────────────────────────────────────────────────
rayon              = "1"

# ─── Encoding ─────────────────────────────────────────────────────────────────
hex                = "0.4"
base64             = "0.22"
bs58               = "0.5"

# ─── Encryption ───────────────────────────────────────────────────────────────
aes-gcm            = "0.10"
pbkdf2             = { version = "0.12", features = ["hmac"] }
hmac               = "0.12"
zeroize            = { version = "1", features = ["derive"] }

# ─── Big Numbers ──────────────────────────────────────────────────────────────
# REMOVED: num-bigint — unused. Project uses custom U256 (runtime/vm/core/u256.rs)
# with [u64;4] limbs, 31 unit tests, full arithmetic/bitwise/comparison ops.

# ─── Concurrency ──────────────────────────────────────────────────────────────
parking_lot        = "0.12"
dashmap            = "5"
crossbeam-channel  = "0.5"

# ─── Async Runtime ────────────────────────────────────────────────────────────
tokio              = { version = "1", features = ["full"] }
tokio-tungstenite  = "0.24"
futures-util       = "0.3"

# ─── Logging ──────────────────────────────────────────────────────────────────
log                = "0.4"
env_logger         = "0.11"

# ─── Time ─────────────────────────────────────────────────────────────────────
# REMOVED: chrono — unused. All timestamps use std::time::{SystemTime, UNIX_EPOCH}
# with domain/types/timestamp.rs providing TimestampHelper abstraction.
# This avoids timezone bugs in consensus-critical code.

# ─── Networking ───────────────────────────────────────────────────────────────
socket2            = "0.5"

# ─── Signal Handling ──────────────────────────────────────────────────────────
ctrlc              = "3"

# ─── Utilities ────────────────────────────────────────────────────────────────
once_cell          = "1"
thiserror          = "1"
anyhow             = "1"
byteorder          = "1"
bytes              = "1"

[dev-dependencies]
tempfile           = "3"
criterion          = "0.5"
proptest           = "1"

[[bench]]
name = "core_benchmarks"
harness = false

[[bench]]
name = "tps_benchmark"
harness = false

[profile.release]
opt-level    = 3
lto          = "thin"
codegen-units = 1
strip        = "symbols"

[profile.dev]
opt-level = 0
debug     = true
